src/ApiGateway/Envoy/config/envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: librecuisine_backend_rout
            virtual_hosts:
            - name: librecuisine_mvc
              domains:
                - "librecuisine"
                - "librecuisine.local"
              routes:
                - name: all
                  match:
                    prefix: "/"
                  route:
                    auto_host_rewrite: true
                    cluster: mvc
            - name: librecuisine_backend
              domains: 
                - "*"
              routes:
              - name: "r-short"
                match:
                  prefix: "/r/"
                route:
                  auto_host_rewrite: true
                  prefix_rewrite: "/"
                  cluster: recipe
              - name: "r-long"
                match:
                  prefix: "/recipe-api/"
                route:
                  auto_host_rewrite: true
                  prefix_rewrite: "/"
                  cluster: recipe
              - name: "i-short"
                match:
                  prefix: "/i/"
                route:
                  auto_host_rewrite: true
                  prefix_rewrite: "/"
                  cluster: identity
              - name: "i-long"
                match:
                  prefix: "/identity-api"
                route:
                  auto_host_rewrite: true
                  prefix_rewrite: "/"
                  cluster: identity

  clusters:
  - name: recipe
    type: LOGICAL_DNS
    load_assignment:
      cluster_name: recipe
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: recipe-api
                port_value: 80
  - name: identity
    type: LOGICAL_DNS
    load_assignment:
      cluster_name: identity
      endpoints:
        - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: identity-api
                    port_value: 80
  - name: mvc
    type: LOGICAL_DNS
    load_assignment:
      cluster_name: mvc
      endpoints:
        - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: mvc-api
                    port_value: 80
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
